feat: agent tools validation
