# src/main/java/org/tkit/onecx/ai/provider/domain/models/enums/ToolPermission.java
@@ -1,0 +1,6 @@
+package org.tkit.onecx.ai.provider.domain.models.enums;
+
+public enum ToolPermission {
+    ALLOW,
+    DENY
+}
